additional users operations
