# src/commandhandler/delete_user_handler.go
@@ -6,49 +6,40 @@ import (
 
 	"github.com/snkonoplev/file-manager/command"
 	"github.com/snkonoplev/file-manager/db"
-	"github.com/snkonoplev/file-manager/entity"
 	"github.com/snkonoplev/file-manager/mediator"
 )
 
-type UpdateUserHandler struct {
+type DeleteUserHandler struct {
 	repository *db.UsersRepository
 }
 
-func NewUpdateUserHandler(repository *db.UsersRepository) *UpdateUserHandler {
-	return &UpdateUserHandler{
+func NewDeleteUserHandler(repository *db.UsersRepository) *DeleteUserHandler {
+	return &DeleteUserHandler{
 		repository: repository,
 	}
 }
 
-func (h *UpdateUserHandler) Handle(context context.Context, c interface{}) (interface{}, error) {
-	if updateUserCommand, ok := c.(command.UpdateUserCommand); ok {
+func (h *DeleteUserHandler) Handle(context context.Context, c interface{}) (interface{}, error) {
+	if deleteUserCommand, ok := c.(command.DeleteUserCommand); ok {
 
-		if !updateUserCommand.IsCallerAdmin {
+		if !deleteUserCommand.IsCallerAdmin {
 			return nil, &mediator.HandlerError{
 				StatusCode: http.StatusForbidden,
 				Message:    "you need admin rights to perform this operation",
 			}
 		}
 
-		user := entity.User{
-			Id:       updateUserCommand.Id,
-			IsAdmin:  updateUserCommand.IsAdmin,
-			IsActive: updateUserCommand.IsActive,
-		}
-
-		user, err := h.repository.UpdateUser(context, user)
-
+		id, err := h.repository.DeleteUser(context, deleteUserCommand.Id)
 		if err != nil {
 			return nil, &mediator.HandlerError{
 				StatusCode: http.StatusInternalServerError,
-				Message:    "can't update user",
+				Message:    "can't delete user",
 				Err:        err,
 			}
 		}
 
-		return user, nil
+		return id, nil
 	}
-
 	return nil, &mediator.HandlerError{
 		StatusCode: http.StatusInternalServerError,
 		Message:    "wrong command type",
