# src/router/router.go
@@ -35,6 +35,7 @@ func (r *Router) MapHandlers() error {
 		users.GET("", r.usersController.GetUsers)
 		users.POST("", r.usersController.CreteUser)
 		users.PUT("", r.usersController.UpdateUser)
+		users.DELETE(":id", r.usersController.DeleteUser)
 	}
 
 	return nil
